# nonebot-plugin-astra-bot

./: .gitignore  LICENSE  README.md  pyproject.toml
nonebot_plugin_astra_bot/: __init__.py  ai_client.py  config.py  desktop_notify.py  enhanced_memory.py  fact_extractor.py  history_manager.py  image_utils.py  logger.py  memory_commands.py  memory_manager.py  message_handler.py  plugin_loader.py  prompt_builder.py  reply_controller.py  search_engine.py
nonebot_plugin_astra_bot/plugins/example_plug/: __init__.py  settings.toml
