[project]
name = "nonebot-plugin-astra-bot"
version = "0.2.0"
description = "AI-powered QQ group chat bot with multi-LLM support, memory system, plugin mechanism, and web search"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-only"}
keywords = ["nonebot", "qq", "bot", "ai", "chat", "memory", "onebot"]

authors = [
    {name = "EveGlowLuna", email = ""},
]

dependencies = [
    "nonebot2[fastapi]>=2.5.0",
    "nonebot-adapter-onebot>=2.4.6",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "openai>=1.0.0",
    "anthropic>=0.40.0",
    "mcp[cli]>=1.0.0",
    "orjson>=3.0.0",
    "nonebot-plugin-localstore>=0.1.0",
]

[project.entry-points."nonebot.plugin"]
nonebot_plugin_astra_bot = "nonebot_plugin_astra_bot"

[project.urls]
homepage = "https://github.com/EveGlowLuna/nonebot-plugin-astra-bot"

[tool.nonebot]
adapters = ["nonebot.adapters.onebot.v11"]
plugin = "nonebot_plugin_astra_bot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
